# demo_patrikspiess

./: .gitignore  .make_release.sh  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTION.md  FANPAGE.md  LICENSE  README.md  WHATSNEW.md  conf.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yaml  release.yaml  testing.yaml  tests.yaml
demo_patrikspiess/: __init__.py  calc.py  config_helper.py  decorator.py  demo.py  log_demo.py  log_helper.py  main.py  write.py
demo_patrikspiess/exceptions/: __init__.py  exceptions.py
docs/: requirements.txt
docs/doctrees/: demops.doctree  environment.pickle  index.doctree
docs/html/: .buildinfo  demops.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
docs/source/: autodoc.rst  build.rst  conf.py  demops.rst  docsguide.rst  documentation_guide.rst  index.rst  installation.rst  setup_project.rst
source/: conf.py  demops.rst  index.rst
src/demo_patrikspiess/: calc.py  write.py
