[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "demo_patrikspiess"
description = "Demo project to try the package deployment"
version = "1.0.2"
license = "MIT"
authors = [
    { name = "Patrik Spiess", email = "patrik.spiess@bluewin.ch" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Framework :: tox",
    "Framework :: Sphinx",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git"
]

requires-python = ">=3.10.0, <4"
dependencies = [
    "rich",
    "PyYAML"
]

[project.optional-dependencies]
dev = [
    "tox",
    "pylint",
    "mypy",
    "types-PyYAML",
    "black"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme"
]

[project.urls]
repository = "https://github.com/patrikspiess/demo_patrikspiess"
issues = "https://github.com/patrikspiess/demo_patrikspiess/issues"


[project.scripts]
demops = "demo_patrikspiess.main:main"

[tool.pylint]
disable = "import-error"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true

[tool.black]
line-length = 100

# here we define the tox settings
# we do it inline ecause we don't want to have another tox.ini in the project root
# package management is done as described in option 3 on the following FAQ
#  - https://python-poetry.org/docs/master/faq/
[tool.tox]
legacy_tox_ini = """[tox]

isolated_build = true
envlist = pylint, mypy, black, docs

[testenv:pylint]
description = Code analysis with pylint
skip_install = true
allowlist_externals = poetry, pylint
commands_pre = poetry install
commands = pylint {posargs} demo_patrikspiess

[testenv:mypy]
description = Static type checking with mypy
skip_install = true
allowlist_externals = poetry, mypy
commands_pre = poetry install
commands = mypy {posargs} demo_patrikspiess --junit-xml mypy.xml

[testenv:black]
description = Check formatting with black
skip_install = true
allowlist_externals = poetry, black
commands_pre = poetry install
commands = black --check --diff {posargs} .

[testenv:docs]
description = Create the documentation with sphinx
skip_install = true
allowlist_externals = poetry, sphinx-build
commands_pre = poetry install
commands = sphinx-build -aEW -b html docs/source docs/build

"""
